--- a/OdeToFood/OdeToFood/Pages/Restaurants/Detail.cshtml
+++ b/OdeToFood/OdeToFood/Pages/Restaurants/Detail.cshtml
@@ -5,9 +5,14 @@
     ViewData["Title"] = "Detail";
 }
 
+@if (Model.Message != null)
+{
+    <div class="alert alert-info">@Model.Message</div>
+}
+
 <h2>@Model.Restaurant.Name</h2>
 <div>
-   Id: @Model.Restaurant.Id
+    Id: @Model.Restaurant.Id
 </div>
 <div>
     Location: @Model.Restaurant.Location
