--- a/OdeToFood/OdeToFood/Pages/Shared/_Layout.cshtml
+++ b/OdeToFood/OdeToFood/Pages/Shared/_Layout.cshtml
@@ -4,8 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - OdeToFood</title>
+    <link rel="stylesheet" href="/node_modules/@@fortawesome/fontawesome-free/css/all.min.css" />
+    <link rel="stylesheet" href="/node_modules/@@fortawesome/fontawesome-free/js/all.min.js" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/fontawesome.css" />
 </head>
 <body>
     <header>
