--- a/OdeToFood/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/OdeToFood/Pages/Restaurants/List.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model ListModel
 @{
+    ViewData["Title"] = "Restaurant";
 }
 
 <h1>Restaurants</h1>
@@ -19,29 +20,13 @@
     </div>
 </form>
 
-<table class="table">
-    @foreach (var restaurant in Model.Restaurants)
-    {
-        <tr>
-            <td>@restaurant.Name</td>
-            <td>@restaurant.Location</td>
-            <td>@restaurant.Cusine</td>
-            <td>
-                <a class="btn btn-lg"
-                   asp-page="./Detail"
-                   asp-route-restaurantId="@restaurant.Id">
-                    <i class="fas fa-search-plus"></i>
-                </a>
-                <a class="btn btn-lg"
-                   asp-page="./Edit"
-                   asp-route-restaurantId="@restaurant.Id">
-                    <i class="fas fa-edit"></i>
-                </a>
-            </td>
-        </tr>
-    }
-</table>
+@foreach(var restaurant in Model.Restaurants)
+{
+    <partial name="_Summary" model="restaurant" />
+}
 
 <a asp-page="./Edit" class="btn btn-outline-primary">Add New</a>
 
+@section footer {
 <div>@Model.Message</div>
+}
